更新了deepseek优化后的代码

--- a/prtsim_test.ipynb
+++ b/prtsim_test.ipynb
@@ -67362,6 +67362,93 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def UNIT_Sph(r):\n",
+    "    # calculate unit vector in spherical coord at position r=(x,y,z)\n",
+    "    # return er, eu, ew\n",
+    "    # er: radial unit vector\n",
+    "    # eu: longitute unit vector\n",
+    "    # ew: latitude unit vector\n",
+    "    er = np.zeros_like(r)\n",
+    "    eu = np.zeros_like(r)\n",
+    "    ew = np.zeros_like(r)\n",
+    "\n",
+    "    x, y, z = r[0], r[1], r[2]\n",
+    "    rxy = np.sqrt(x**2 + y**2)\n",
+    "    rxy1 = 1 / rxy\n",
+    "    rxyz = np.sqrt(x**2 + y**2 + z**2)\n",
+    "    rxyz1 = 1 / rxyz\n",
+    "    \n",
+    "    er[0], er[1], er[2] = x * rxyz1, y * rxyz1, z*rxyz1     # er[0] = sin(u) * cos(w), er[1] = sin(u) * sin(w), er[2] = cos(u)\n",
+    "    \n",
+    "    eu[0], eu[1], eu[2] = z * rxyz1 * x * \\\n",
+    "        rxy1, z * rxyz1 * y * rxy1, -rxy * rxyz1         # eu[0] = cos[u] * cos(w), eu[1] = cos(u) * sin(w), eu[2] = -sin(u)\n",
+    "    ew[0], ew[1], ew[2] = -y * rxy1, x * rxy1, 0         # ew[0] = -sin(w), ew[1] = cos(w), ew[2] = 0\n",
+    "\n",
+    "    return er, eu, ew"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([0.83205029, 0.5547002 , 0.        ]),\n",
+       " array([ 0., -0.,  1.]),\n",
+       " array([-0.5547002 ,  0.83205029,  0.        ]))"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "position = np.array([1.5,1,0])\n",
+    "r = np.linalg.norm(position)\n",
+    "er = position / r\n",
+    "ew = np.array([-position[1], position[0], 0]) / np.hypot(position[0], position[1])\n",
+    "eu = np.cross(er, ew)\n",
+    "er,eu, ew"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.clip(7,1,6)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -67370,7 +67457,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ptc_sim",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -67384,7 +67471,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.8.17"
   }
  },
  "nbformat": 4,
